src/test/egern/success/function_empty_return.egern
func emptyReturn(b) {
    var a = 4;
    return;
}
print(emptyReturn(5));
