src/test/egern/fail/calling_nested_function_fail.egern
func outer(a) {
    var b = 3;
    func inner(a, b) {
        var c = 4;
        return a - b + c;
    }

    var d = inner(b, a);
    return d;
}

print(outer(4));
print(inner(3, 5));
